# ProjectOfSubmarine

./: CMakeLists.txt  CMakePresets.json  ControlComputer.cpp  Joystick10Axis.cpp  JoystickCode.cpp  README.md  SubmarineComputer.cpp  Untitled-2024-08-07-1423.excalidraw
EngineApp/: CMakeLists.txt  CMakePresets.json  EngineApp.cpp
EngineStartApp/: CMakeLists.txt  EngineStartApp.cpp
